Update start_url and icon paths in manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -2,20 +2,21 @@
   "name": "FIFO Roster",
   "short_name": "FIFO Roster",
   "description": "Track your FIFO swing roster and paydays",
-  "start_url": "https://whiskeymate.github.io/FIFO-Roster-Tool/",
+  "start_url": "/FIFO-Roster-Tool/",
+  "scope": "/FIFO-Roster-Tool/",
   "display": "standalone",
   "background_color": "#f8fafc",
   "theme_color": "#3b82f6",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "/FIFO-Roster-Tool/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "icon-512.png",
+      "src": "/FIFO-Roster-Tool/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
